Roster Trunk: - fixed thumbnail from creating scrollbars for the slider

--- a/templates/default/main/camera.css
+++ b/templates/default/main/camera.css
@@ -20,8 +20,8 @@
 }
 .camera_wrap {
 	display: none;
-	float: left;
-	position: relative;
+	/*float: left;*/
+	/*position: relative;*/
 	z-index: 0;
 }
 .camera_wrap img {
